--- a/src/styles/my-styles/layouts/_right-sidebar.sass
+++ b/src/styles/my-styles/layouts/_right-sidebar.sass
@@ -10,3 +10,6 @@
 
 	.sign-up-mobile
 		+display(none)
+@media (max-width: 1116px)
+	.right-sidebar
+		max-width: 100%
